# PRSice

./: .bettercodehub.yml  .clang-format  .coveralls.yml  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  CNAME  Make_file.linux  Makefile  Makefile.win  Makefile.win32  Missing_Features.rmd  PRSice  PRSice.R  PRSice_mac  PRSice_v1.25.R  README.md  checkR.sh  format.sh  help_messages.txt  index.html  log  mkdocs.yml  mkl_test.sh  search.html  sitemap.xml  zlib_for_window.sh  zlib_for_window32.sh
.github/ISSUE_TEMPLATE/: bug_report.md
PRSice/: CMakeLists.txt  PRSice  PRSice.R  PRSice.cbp  PRSice.cbp.save  PRSice.layout.save
PRSice.dSYM/Contents/: Info.plist
PRSice/PRSice.xcodeproj/: project.pbxproj
PRSice/PRSice.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PRSice/PRSice.xcodeproj/project.xcworkspace/xcuserdata/shingwanchoi.xcuserdatad/: UserInterfaceState.xcuserstate
PRSice/PRSice.xcodeproj/xcuserdata/shingwanchoi.xcuserdatad/xcschemes/: PRSice.xcscheme  xcschememanagement.plist
PRSice/inc/: commander.h  commander.h.save  commander.hpp  misc.hpp  plink.hpp  prsice.h  prsice.hpp  region.hpp  regression.h  regression.hpp  snp.h  snp.h.save  snp.hpp  storage.hpp  usefulTools.h
PRSice/src/: commander.cpp  commander.cpp.save  main.cpp  main.cpp.save  misc.cpp  plink.cpp  prsice.bk.cpp  prsice.cpp  prslice.cpp  region.cpp  region_test.cpp  regression.cpp  snp.cpp  snp.cpp.save  usefulTools.cpp
Release/: packing.sh
archive/: index.html
base_file/: index.html
clumping/: index.html
command_detail/: index.html
compilation/: index.html
covariate/: index.html
css/: extra.css
decisions/: index.html
developers/: index.html
docs/: Makefile  about.md  archive.md  base_file.md  clumping.md  command_detail.md  compilation.md  covariate.md  decisions.md  developers.md  extra_steps.md  faq.md  general.md  index.md  misc.md  permutation.md  plot.md  prset_command.md  prset_detail.md  prslice_command.md  pthresholding.md  quick_start.md  quick_start_prset.md  resources.md  set_clump.md  set_perm.md  step_by_step.md  target_file.md  update_log.md
docs/css/: extra.css
docs/source/: conf.py  index.rst  prset_quick_start.rst  quick_start.rst  step_by_step.rst
extra_steps/: index.html
faq/: index.html
general/: index.html
helpers/: checklist.md  help_messages.txt  mkl_test.sh  zlib_for_window.sh  zlib_for_window32.sh
img/: set_clump.pptx
inc/: SFMT.h  bgen.hpp  bgen_lib.hpp  binarygen.hpp  binarygen_setters.hpp  binaryplink.hpp  columnFile.hpp  commander.hpp  dcdflib.h  enumerators.h  family.hpp  fastlm.hpp  genotype.hpp  genotype_pool.hpp  genotypefactory.hpp  glm.hpp  gzstream.h  memoryread.hpp  misc.hpp  pipeline_functions.hpp  plink.hpp  plink.hpp.bk  plink_common.hpp  plink_set.hpp  prsice.hpp  region.hpp  regression.hpp  reporter.hpp  snp.bk.hpp  snp.hpp  storage.hpp  thread_queue.hpp
javascripts/: details.js
lib/: IITree.h  LICENSE.txt  bgen_lib.hpp  cgranges.h  mio.hpp  plink_common.hpp
misc/: index.html
permutation/: index.html
plot/: index.html
prset_command/: index.html
prset_detail/: index.html
prslice_command/: index.html
pthresholding/: index.html
quick_start/: index.html
quick_start_prset/: index.html
resources/: index.html
search/: search_index.json
source/: conf.py  index.rst  prsice.rst
src/: .binarygen.cpp.swp  .plink_common.cpp.swp  CMakeLists.txt  SFMT.c  bgen.cpp  bgen_lib.cpp  binarygen.cpp  binaryplink.cpp  cgranges.cpp  columnFile.cpp  commander.cpp  dcdflib.cpp  fastlm.cpp  genotype.cpp  genotype_pool.cpp  gzstream.cpp  main.cpp  misc.cpp  plink.cpp  plink_common.cpp  plink_set.cpp  prset.cpp  prsice.cpp  prslice.cpp  region.cpp  regression.cpp  reporter.cpp  snp.cpp
src/bk/: plink.bk  plink.cpp  snp.bk.cpp
step_by_step/: index.html
target_file/: index.html
template/: dosagetemplate.cpp  dosagetemplate.h
test/: CMakeLists.txt  CMakeLists.txt.in  catch-main.cpp  data  main.cpp  runCoverage.sh
test/csrc/: binarygen_filtering.cpp  binarygen_read.cpp  binarygen_sample_load.cpp  binarygen_snp_load.cpp  binaryplink_filtering.cpp  binaryplink_read.cpp  binaryplink_sample_load.cpp  binaryplink_snp_load.cpp  command_loading.cpp  command_validation.cpp  commander_test.cpp  genotype_basic.cpp  genotype_clump.cpp  genotype_load_snp.cpp  genotype_prs.cpp  genotype_read_base.cpp  genotype_read_sample.cpp  main_check.cpp  misc_test.cpp  prsice_covariate.cpp  prsice_pheno.cpp  prsice_prs.cpp  region_basic.cpp  region_exclusion.cpp  region_process.cpp  snp_test.cpp
test/data/: TOY_TARGET_DATA.bim  TOY_TARGET_DATA.founder.fam  TOY_TARGET_MISS.fam
test/data/bk/: TOY_BASE_GWAS.assoc  TOY_BASE_GWAS.short.assoc  TOY_TARGET_DATA.cov  TOY_TARGET_DATA.dup.fam  TOY_TARGET_DUP.bim  TOY_TARGET_QUANTITATIVE.pheno
test/inc/: bin_plink_test.hpp  command_test.hpp  genotype_test.hpp  global.hpp  mock_binarygen.hpp  mock_binaryplink.hpp  mock_commander.hpp  mock_genotype.hpp  mock_prsice.hpp  mock_region.hpp  prsice_test.hpp  region_test.hpp  snp_test.hpp
test/src/: binarygen_test.cpp  binplink_test.cpp  commander_test.cpp  genotype_test.cpp  misc_test.cpp  order_stat_test.cpp  prsice_test.cpp  region_test.cpp  snp_test.cpp
update_log/: index.html
window/: compile_zlib_win  thread_test.cpp  zlib-1.2.11.tar
